Positioned nav bar

--- a/index.html
+++ b/index.html
@@ -9,4 +9,10 @@
     <form>
         <input type="search" class="search">
     </form>
+    <ul>
+        <li><a>About</a></li>
+        <li><a>Store</a></li>
+        <li style="float: right;"><a>Gmail</a></li>
+        <li style="float: right;"><a>Images</a></li>
+    </ul>
 </body>
