--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
     <form>
         <input type="search" class="search">
     </form>
-    <ul>
+    <ul class="topbar">
         <li><a>About</a></li>
         <li><a>Store</a></li>
-        <li style="float: right;"><a>Gmail</a></li>
-        <li style="float: right;"><a>Images</a></li>
+        <right>
+            <li><a>Images</a></li>
+            <li><a>Gmail</a></li></ul>
+        </right>
+    </ul>
+    <ul class="footer">
+        <li><a>Advertising</a></li>
+        <li><a>Business</a></li>
+        <li><a>How Search Works</a></li>
+        <right>
+            <li><a>Privacy</a></li>
+            <li><a>Terms</a></li>
+            <li><a>Settings</a></li>
+        </right>
     </ul>
 </body>
