Edited topbar text and padding

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <li><a>About</a></li>
         <li><a>Store</a></li>
         <right>
-            <li><a>Images</a></li>
-            <li><a>Gmail</a></li></ul>
+            <li><a>Gmail</a></li>
+            <li><a>Images</a></li></ul>
         </right>
     </ul>
     <ul class="footer">
